# corale

./: Cargo.toml  README.md
src/: lib.rs
src/core/: direction.rs  face.rs  line.rs  maths.rs  mesh.rs  mod.rs  point.rs  vertex.rs
src/geom/: area.rs  bounding_box.rs  collider.rs  face.rs  filter.rs  mesh.rs  mod.rs  polygon.rs  shapes.rs  vertex.rs
src/graph/: complex_graph.rs  graph.rs  mod.rs  simple_graph.rs
src/grid/: error.rs  grid_map.rs  grid_object.rs  mod.rs
src/mesh/: bounding_box.rs  collider.rs  filter.rs  mesh.rs  mod.rs  primitive.rs  shapes.rs  vertex.rs
src/primitive/: collider.rs  cuboid.rs  mod.rs
src/wavefront/: export_obj.rs  mod.rs  parse_obj.rs
